# glide-for-redis

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: node.yml  npm-cd.yml
babushka-core/: Cargo.toml  build.rs
babushka-core/benches/: connections_benchmark.rs
babushka-core/src/: headers.rs  headers_legacy.rs  lib.rs  rotating_buffer.rs  socket_listener.rs  socket_listener_legacy.rs
babushka-core/tests/: test_socket_listener.rs
benchmarks/: install_and_test.sh
benchmarks/csharp/: Program.cs
benchmarks/node/: node_benchmark.ts  package-lock.json  package.json
benchmarks/python/: python_benchmark.py  requirements.txt
benchmarks/utilities/: package.json
csharp/lib/: AsyncClient.cs  AsyncSocketClient.cs  AsyncSocketClientBase.cs  AsyncSocketClientBlockPipeTry.cs  AsyncSocketClientBlockPipeTryUnOfficial.cs  Message.cs  MessageContainer.cs  RedisValue.cs  babushka.csproj
csharp_client/: Program.cs
csharp_server/: Program.cs  csharp_server.csproj
examples/python/: README.md  (+1 more)
go/: .gitignore  go.mod
node/: DEVELOPER.md  README.md  index.ts  package-lock.json  package.json  tsconfig.json
node-legacy/: README.md  index.ts  package.json
python/: Cargo.toml  README.md  requirements.txt
redis-rs/: Cargo.toml
rust/grpc-babushka/: Cargo.toml
rust/grpc-babushka/proto/: grpcbabushka.proto
rust/grpc-babushka/src/: client.rs  server.rs
rust/grpcbabushka/: Cargo.toml  build.rs
rust/grpcbabushka/proto/: grpcbabushka.proto
rust/grpcbabushka/src/: client.rs  lib.rs
rust/grpcbabushka/src/grpc_listener/: grpc_listener_impl.rs  mod.rs
(+79 files in other folders)
